@@ -1,3 +1,7 @@
+2019-02-08  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/powerpc/bits/mathinline.h: Remove.
+
 2019-02-08  Florian Weimer  <fweimer@redhat.com>
 
 	math: Enable <bits/math-finite.h> sysdeps override, as used on ia64.
